--- a/EditorDeGrafos/EditorDeGrafos.resx
+++ b/EditorDeGrafos/EditorDeGrafos.resx
@@ -602,6 +602,91 @@
         bQjKIVHzdLRt/Ml90k2Qk90608D/1w0QgjeT6OoAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="EulerTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAOiSURBVEhLnVbtS1NRGPcPCUYoI0a+JubLMtN8Ad/6kB+U
+        +hBiQu6DFmGoLUssN3UG8yWMTK1tbTqnjootcZlIIiMinFAsNsnCJFmrCMTkac/ZubJ7d+92tx/8ONt5
+        nuf8znNennMTIE6MK5XwOCMDVElJMKfX017xiEvYPj8PHzMzYTPnDPzIzoa3qang8XioVRziEh7Taomg
+        M+88LMgvkUk4HA5qFYe4hL1eLyykpJCMkd0SCWxtbVGrOMQl7FicB4teCiudKaCqOwqe9XSwmIepVRzi
+        Ep411QL8ymaxs+0YtYpDzMKYLWbIFfZ9yQS73U69oiN2YduFMFGGDvt16hUdMQkLZcvQ8Vwm+lrFJMy3
+        t1yKPWSihaNly9BiOEEjIkO8cIS9DSUeMp1OR6OEEVHYtbYGJpUKbjY2kgH5hPiouVUMr0ZHYXV1lY4U
+        DkFhp9MJ81lZpDQiVVUSXhEux/oS4XVyMonBdjFQ1/kgKIwzxuBPuaXgzSmEd+mB6hSoVnhyhYh2Q42U
+        xFnzr5BWU1BAR2RDUHh8cJAEbuRVkHqM2btcLtjZ2YHd3V3w+Xy8vFdUROKm8ptJa2xooCOyISjs9/tB
+        ea4Y5mQyWMpJhulhcdcEXyltYiJ8DrxYONkVm41a2BAUPjg4AIuxghwqpLqnhVoig7l2uPTdt0tobzgE
+        he02M+skc+/nja8j0P/dAFb/Cu0JIrTI4ASEKpmgsNVcfTgAEidhmZmkVoC725Pg2fsGP//9pj2YrTWs
+        yHQqG6mVDV5hHIDv3g4N5FOPYMaY7ebeNu3hL6lClSxMeH9/n+wtdwAkToZZOsz4w1/3oTBftkyMYzH8
+        YzBMmLu3XA5omogfCi7/eU/EEeMPa3j9kb3d4VmzhPEemp6W8gYzxKVDv1Asv3kZ8QEJXSkGLGE8PJGy
+        Zch9+sQ8l9yPhAS32w0jZWUwKZVCb0mqKOE7HTIwdnTAUFoaaKurSank82OIY/bWSYhOf2trUBhLGpY2
+        l7ySlEajIvIgyOkuKalM67mVJLbt9BFeP4a2dhnLv6+pCRKe0dr64tRl0urLC8CkV8CMqRksUy0wG8I5
+        81XQTVyDnrPHie9GbjlpsUTiNpmMYzBneUC2YtqkhScT6sBvNTwqPEn8luQXCYflckjQKBSkE4mzmlKr
+        yVJEgqari/gzH/RCDwEDzBD9mYzv19cHDxc+gfrAH2y5J1YI6GuorSWDRotBO/phpu1VVYH/PvgPK5cs
+        RzLi4QIAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="ColoreadosTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
+        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
+        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
+        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
+        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
+        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
+        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
+        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
+        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
+        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="CorolariosTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAASxSURBVEhLpZdrU1pXFIb5Rf0b/dYP7bdOxtbpTNpxUqut
+        eKsj2mhUKtqK14hRUKPBC/VWrVHxkqSdGJRo7VSjURQjKooa7gd4e9bi4AU0WHiYPWevszb7Pfu+tgwi
+        k5OTyMzMREFBAfLz85GTkwOn00mupBAEARqNhusuLCxEVVUVhoaG2CczGAyoq6tD6OgY/rnnCFqt8Hq9
+        SElJ4QLJUFZWhpWVFc77nk7ys729HZ2dnZDRVxCCeQm+4VE48xVsr6+vc4FEWVxcPP+/f3pWrLcQoZMT
+        ttPT0yErKipig4TJ6cwtYDsYDOLOF01obd9NKClKnrE44XqghH9qGt7uHrbLy8sho/4nSNg/+wwebQdC
+        p6cwGo2gYUgUu92O1tZWhBwncDc0I7C8Atf9cvbRPJKZTCYeCxpjd10T/JNGWCwW3PtOw4WS4au7VXht
+        Np93MTVIrVZDq9WCZzV1iUKhwA9yFeRyOc9E89Iemtus/IdEGBk7xOxzB6qrq6FUKqGq6kZGRgZGRkbY
+        z8IRegz7cLkCkgWYl9/j9z/sknV7RsftMM4eS1YYGvfLXBHW99vgdgclK8yE8QhzLxySFR/60OjyHk8Q
+        XT02yQpzRbi7z8aFounU72H1jUuybmZg5AAzc1dbSsQVJgGvL1aYqG/ewZuNm8X7B/djujdCfOEne/D7
+        Q5IVS03DNra2PZJ1Ac2Np1NHkhVLXOH2rj0EArHCir0WZFh/Raa1BunVf+LsTJA84vDML+PjoUrYhfCS
+        IfJ2G6RcmLjCusfvELqmwSR6ueL7FW8xbV/Gp7OVqH01gz7HNLRHo+xbcK+i8F0z5yPEFY6e8hFI+IFN
+        h7rDPvhCAibO5vHR9LfQdG+x3xPy4UtLCeeLxN5Zcq9zPkJSwnNOM1dIwjTJKodf4hPjzzCczHCZezsq
+        7Pj38fW2ku3LJCUc6WoSjZSzHfjwffVLzr9wLuPOVjE09kG2L5OwsPqgF9+ILfnsVRkapkwsotrv4vSL
+        xYC2TnFuiL/PNxU4EGI3m4SFCWopLbfrWHx9xkvqJhIW3rP5oNHu4r3zYh+PhsRp57qJ6LrjCtuP/FA3
+        bn9QNMJf8ycYm7j+UPlfwqenAlRqy61EI9AhYVo8k6wLPij8SHfhJLHbtjQaGpboff1aYQpz8vLyUF7R
+        BIrBamtb0NRiTUg0Qm3TDuZNuxzdUJCRJa/gsHlzc5P9sra2No6NCIq53DX1WFlYEKOFH/ldMtxN07KQ
+        8Pc/CPy7yu8owlxbW4OstLSUX3j7fkNg4y3nQx4PdDodNjY22E4EvV6P8fFxzruU1fCNjcP1UxnbFNzL
+        SkrCeyxFgpdZXd1EpnyQNwc6POjkonVMZzYlWpcUOFDUQmuYEp3JA8MHGBo9FIPFWqkmse76h/z0PNJy
+        wJebmwtZVlYWv/Q+fsJdQo6QeJOgL6axp9OKjkpBCPFZTYECJdoUKEyiGI3mAiVaBccOgZdg48Ou8x47
+        F37Ywk9ucW9vLwYHw/srdYe3fwDr4rUj0hPJkJaWJn6cmwW9XXoEd6wcwVKDeFZ3dHRApVLxjM7OzkZj
+        YyMcjtsHeDdBd7DU1FS+tBUXF3N4OzNDpxnwH4rZ621hkzzRAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="KuratowskiTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAOUSURBVEhLvZdZSBVhFMf/tihki1hYQYtpVLQZEilUmi0a
+        UWJ1k0TTFLFVDCG1ejCMENqIaLOnyCx6qJcWodKiQimhLEjCh0pfgog0KNsepv+Z7xudu829ZvaDP3PO
+        ce6c+ZZzvhF/yw4gpgSI0O7/4SSw4jPQ/R4wmDxahwef7RywwaQ91G5gqw4PKqGUi1p8ADhWB3DAWEJt
+        oAaNSdRmylrXudRkZSKMKqQmmN4/ZAG1Xpm92BNb5FApyhwYMroMaqLp2QlLWwnEJ2jPjrxkrjL/jtlU
+        OuVdMmMq41HU2YWCt9xjJZLIkxCqgOrXjh9KyShXmJ4vos8ko9IwUN5jYH6drLs/ZCNuUaYzMro8ynPt
+        vIktO4e46iqgcoiO+GMWtU2ZbpREYNH1PUDCMjprKBmxPyTJTK3VlMzMeEoeHmhHuxCVkYN5tcwlS5HR
+        csOcNtcLNiMPis0ysRNJcV3xnRpByRp261gx5Uxu+xsz16rGS8DyuzUq8bPX/JOUjHSiFDTjBF7xgfUo
+        k99orMQfTA+opsQ/b3qaR8C1l4wfUc9aSMlzN2JdUxsqfhhIfXBc7gPC0w+bU95HCBrRwUcaeIh39LO0
+        silrxJL0F/WbKqI2US6uk6uT9/Am4w5wkzHbc2OiEJq2155LjERlaqqRhCe4ynctpycbTrBGLMvSSn2l
+        pOSsnT2ayuIhUtYE3DoFLFXhXlj7GKvMPnbpqy/kxWRn2tf4i7aTqUxqir7aZ84Tn6UlvTYQ+yhJJmss
+        u9oa/UEq0EERTq1SpjvyprHK9EsaZSUTuIym/4JKkoADqZR369UEKgk5Bq0RH6Vk+j/qWA3lhOO5HWid
+        pWHItN6m5BSSTcW9ZMZqKX8Mp6Q5+WUc5d3YSzGDY6vCKF5VSdnviaPyeUxFs38e2glMVWE35CVl8zmS
+        r699tJmtxMBp3KM3RgXd4dfII863wcX+pEN2gjomS/W1jwa04ycTN+CyjnjBTlEniVtUfduRad6oTGdk
+        SuxTOZpjLMQVlk+eY41yQpA5HajQroV8kwWcZgv7GSt91jGhB1HUWmWaSCsNGivxNEraXH+RZCOVaW7G
+        4GCmzLM84Tk//XpbNxJxgVXPwwdzVCAIngPNslEeA0/pypnsS/KN7VtZLMsOdJmVcBE8HYOEfbCe551x
+        H3hAV3qwk2THuiuSamVZfWNifmYwFjzsnckD+qcsm9Wwn5+6yRimIzaAP6DD19IsC59SAAAAAElFTkSu
+        QmCC
+</value>
+  </data>
   <metadata name="openFileGrafo.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>517, 17</value>
   </metadata>
@@ -719,6 +804,15 @@
         TkSuQmCC
 </value>
   </data>
+  <metadata name="relojEuler.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>775, 17</value>
+  </metadata>
+  <metadata name="relojHammilton.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>877, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>47</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAAAAAAEAIACzIwAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAI3pJ
